fixes to quick launch bookmark icons.
- letter icons for websites without favicons.
- changed loading bandwidth for quicker page loads.

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
     "newtab": "home.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self';"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: https:;"
   },
   "permissions": [
     "storage"
