--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "interface",
+  "name": "interface-2",
   "description": "A minimalist home page and bookmark launch pad",
   "manifest_version": 3,
-  "version": "2.0.1",
+  "version": "2.1.0",
   "icons": {
     "16": "Images/favicon-16x16.png",
     "32": "Images/favicon-32x32.png",
@@ -26,6 +26,15 @@
     "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: https:;"
   },
   "permissions": [
-    "storage"
-  ]
+    "identity", "alarms", "storage"
+  ],
+  "host_permissions": [
+    "https://www.googleapis.com/*"
+  ],
+  "oauth2": {
+    "client_id": "666923754067-qk3lbggfpbd1vns3i0cmagpa0p0kst14.apps.googleusercontent.com",
+    "scopes": [
+      "https://www.googleapis.com/auth/calendar.readonly"
+      ]
+  }
 }
